Noteworthy changes in version 0.91 (unreleased)
-----------------------------------------------


Noteworthy changes in version 0.90 (2012-05-03)
-----------------------------------------------

 * First tarball release.


 Copyright 2011, 2012 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.